2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/.cvsignore:
	- It's test-pager, not yelp-pager.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/.cvsignore:
	* src/.cvsignore:
	- Adding data/toc.xml and src/test-pager to .cvsignore

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Change to the way toc pages are pruned so that we don't get orphaned
	  Categories headers.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* configure.in: Version 2.5.0.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Removed the DOCTYPE, because it was passing straight through intltool
	  and the resultant toc.xml had an incorrent DOCTYPE.
	- Rearranged the menu a bit.

2003-12-02  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-db-pager.c:
	- Don't require top element id to be index.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Changed the way toc nodes are processed to give a depth-first,
	  post-order traversal.  This way I can prune empty toc pages.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Handling all SK categories, from mariano.

	* src/yelp-window.c:
	- Start with Loading..., so the titlebar doesn't look like ass.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make the Loading message kind of animated, for better feedback.

2003-12-01  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-toc-pager.c:
	- Switched to using a single pending function that calls the appropriate
	  function on each iteration.  Makes the code nicer.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* src/yelp-window.c:
	- Make no-sidebar the default, to avoid momentary flicker.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Some work on the TOC.

	* src/yelp-db-pager.c:
	- Actually use the parser options.

2003-11-30  Shaun McCance  <shaunm@gnome.org>

	* data/toc.xml.in:
	- Implementing more of the TOC.

	* src/yelp-toc-pager.c: